# genomic-llm-augmentation

./: .env.example  .gitignore  README.md  config.yaml  mkdocs.yml  pip.ini  pyproject.toml  requirements.txt
article/: algorithm_survey_paper.md  article_context_learning_genomic_prediction.md  biological_validation_ipk.md  biological_validation_pepper.md  full_experiment_article.md  snp_survey_paper.md
docs/: data_schema.md  index.md
portfolio/: index.html  script.js  styles.css
requirements/: base.txt  ml.txt
scripts/: DATA_QUALITY_REPORT.md  aggregate_multi_seed_summary.py  aggregate_pepper_augmented_run_140954.py  aggregate_sweeps.py  align_xy.py  analyze_correlation_and_filter_contexts.py  analyze_dataset_quality.py  analyze_pepper_data_quality.py  analyze_qwen_data_quality.py  analyze_snp_importance_shap.py  audit_and_backfill_model_metrics.py  augment_ipk_llama3.py  benchmark_by_prompt.py  benchmark_gblup_vs_stacking.py  biological_validation.py  check_cuda.py  check_data.py  check_env.py  check_keys.py  check_pepper_data.py  check_preprocessing.py  check_preprocessing_status.py  clean_augmentation.py  clean_pepper_outputs.py  clean_workspace.py  clean_x_csv.py  compile_all_results.py  compute_llama3_200_corr.py  compute_real_genetics.py  consolidate_augmented_data.py  consolidate_generic.py  controlled_augmentation_pepper_k3000.py  convert_ipk_x_to_parquet.py  convert_pepper_x_to_parquet.py  correct_pepper_data_fast.py  correct_pepper_data_optimized.py  correct_pepper_ultra_fast.py  create_comparison_plots.py  create_mini_X.py  create_pepper_data_manual.py  (+128 more)
(+52 files in other folders)
